fix word wrap issue

--- a/css/main.css
+++ b/css/main.css
@@ -228,8 +228,8 @@ footer {
 }
 
 .chat-container p {
-    overflow-wrap: break-word;
-    word-break: break-all;
+    /* overflow-wrap: break-word;
+    word-break: break-all; */
 }
 
 .app .flow-icon {
